--- a/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
@@ -217,7 +217,7 @@ l_english:
  STATE_215:0 "벨로모르스크"
  STATE_216:0 "페트로자보츠크"
  STATE_217:0 "차리친"
- STATE_218:0 "로스토프-나-도누"
+ STATE_218:0 "로스토프나도누"
  STATE_219:0 "모스크바"
  STATE_220:0 "쿠르스크"
  STATE_221:0 "하르키우"
@@ -226,7 +226,7 @@ l_english:
  STATE_224:0 "브랸스크"
  STATE_225:0 "수미"
  STATE_226:0 "카테리노슬라우"
- STATE_227:0 "유지프"
+ STATE_227:0 "유조프카"
  STATE_228:0 "루한스크"
  STATE_229:0 "아제르바이잔"
  STATE_230:0 "하야스탄"
@@ -234,10 +234,10 @@ l_english:
  STATE_232:0 "그로즈니"
  STATE_233:0 "블라디카프카즈"
  STATE_234:0 "예카테리노다르"
- STATE_235:0 "스트브로폴"
+ STATE_235:0 "스타브로폴"
  STATE_236:0 "아스트라한"
  STATE_237:0 "옐리스타"
- STATE_238:0 "볼고돈스크"
+ STATE_238:0 "침랸스카야"
  STATE_239:0 "사라토프"
  STATE_240:0 "벨고로드"
  STATE_241:0 "고멜"
@@ -330,9 +330,9 @@ l_english:
  STATE_328:0 "안둥"
  STATE_329:0 "탄누투바"
  STATE_330:0 "몽골"
- STATE_331:0 "뉴퍼틀랜드"
+ STATE_331:0 "뉴펀들랜드"
  STATE_332:0 "래브라도"
- STATE_333:0 "북 보르네오"
+ STATE_333:0 "북부 보르네오"
  STATE_334:0 "칼리만탄"
  STATE_335:0 "자바"
  STATE_336:0 "싱가포르"
@@ -471,7 +471,7 @@ l_english:
  STATE_469:0 "서스캐처원"
  STATE_470:0 "앨버타"
  STATE_471:1 "유콘 준주"
- STATE_472:1 "노스웨스트" 준주"
+ STATE_472:1 "노스웨스트 준주"
  STATE_473:0 "브리티시컬럼비아"
  STATE_474:0 "유카탄"
  STATE_475:0 "치아파스"
@@ -916,18 +916,18 @@ l_english:
  STATE_914:0 "카빈다"
  STATE_915:0 "하일"
  STATE_916:0 "므반자 콩코"
- STATE_917:0 "Lunda-Chokwe Ocidental"
- STATE_918:0 "Kagera"
- STATE_919:0 "Oromia"
- STATE_920:0 "Amhara"
- STATE_921:0 "Afar"
+ STATE_917:0 "룬다-초크웨 옥시덴탈"
+ STATE_918:0 "카게라"
+ STATE_919:0 "오로미아"
+ STATE_920:0 "암하라"
+ STATE_921:0 "아파르"
  STATE_922:0 "오모"
- STATE_923:0 "Tigray"
- STATE_924:0 "Benishangul-Gumaz"
+ STATE_923:0 "티그레"
+ STATE_924:0 "베니샹굴구무즈"
  STATE_925:0 "Gallaland"
- STATE_926:0 "Sermersuaq"
+ STATE_926:0 "세르메르소크"
  STATE_927:0 "카메룬"
- STATE_928:0 "Kongo-Barthstadt"
+ STATE_928:0 "콩고-바르트슈타트"
  STATE_929:0 "웨스트버지니아"
  STATE_930:0 "델마바"
  STATE_931:0 "코네티컷"
@@ -939,27 +939,27 @@ l_english:
  STATE_937:0 "Finnmarksvidda"
  STATE_938:0 "셰틀랜드"
  STATE_939:0 "오크니"
- STATE_940:0 "Olivenza"
+ STATE_940:0 "올리벤사"
  STATE_941:0 "독일령 사모아"
  STATE_942:0 "포어아를베르크"
  STATE_943:0 "알타 사보이아"
  STATE_944:0 "하라르"
  STATE_945:0 "북부 케이프"
  STATE_946:0 "동부 케이프"
- STATE_947:0 "Oranje-Vrystaat"
+ STATE_947:0 "오라녜-프리슈타트"
  STATE_948:0 "Ngoma"
- STATE_949:0 "Bukavu"
- STATE_950:0 "Inhambane-Gaza"
- STATE_951:0 "Mavinga"
- STATE_952:0 "Adamaua"
+ STATE_949:0 "부카부"
+ STATE_950:0 "이냠바느-가자"
+ STATE_951:0 "마빙가"
+ STATE_952:0 "아다마와"
  STATE_953:0 "Tekeland"
  STATE_954:0 "Tete"
  STATE_955:0 "동 보르벡슬란트"
  STATE_956:0 "북 보르벡슬란트"
  STATE_957:0 "서 보르벡슬란트"
  STATE_958:0 "오스트바르셀로랜드"
- STATE_959:0 "Lunda-Chokwe Oriental"
- STATE_960:0 "Kiruna"
+ STATE_959:0 "룬다-초크웨 오리엔탈"
+ STATE_960:0 "키루나"
  STATE_961:0 "Dankalia"
  STATE_962:0 "Marua"
  STATE_963:0 "Akanland"
@@ -968,12 +968,12 @@ l_english:
  STATE_966:0 "Hinterland"
  STATE_967:0 "모리타니 사막"
  STATE_968:0 "아드라르"
- STATE_969:0 "Grabenbruch"
+ STATE_969:0 "그라븐브루흐"
  STATE_970:0 "몸바사"
  STATE_971:0 "동 뉴카메룬"
  STATE_972:0 "동남 뉴카메룬"
  STATE_973:0 "남 뉴카메룬"
- STATE_974:0 "Oubangui"
+ STATE_974:0 "우방기"
  STATE_975:0 "도이치차드"
  STATE_976:0 "룰루스타드"
  STATE_977:0 "키부"
