--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -60,7 +60,7 @@ worldnews.14.d:0 "리투아니아에서 가장 유명한 인상주의 작가인 
 worldnews.14.a:0 "그는 세계를 가능한 한 나쁘게 만들려고하고 있는걸까?"
 
 worldnews.15.t:0 "케렌스키 대통령 암살"
-worldnews.15.d:0 "케렌스키는 상원에가는 길에 총에 맞아 죽었습니다! 가해자는 경찰에 의해 체포됬지만 공격자의 목표와 의도는 알 수 없습니다. 케렌스키가 어설픈 토지 개혁과 비효율적인 통치로 인해 러시아 국민들에게 인기를 얻지 못했음에도 불구하고 수년간 이 나라를 하나로 이끌었으며, 그의 죽음은 러시아를 혼란에 빠뜨렸습니다. 상원 의원은 케린스키의 대체자에 대해 이미 논의하고 있으며, 좌파와 우파 양측 모두 새로운 연합이 형성되고있는 반면, Denikin, Wrangel, Kornilov 같은 군인들은 민주주의를 해산하고 'Mother Russia'를 지키기위해 위해 개입을 준비하고 있습니다..."
+worldnews.15.d:0 "케렌스키 대통령이 상원에 가는 길에 총에 맞아 숨졌습니다! 가해자는 경찰에 의해 체포되었지만 공격자의 목표와 의도는 알 수 없습니다. 케렌스키는 어설픈 토지 개혁과 비효율적인 통치로 인해 러시아 국민들에게 인기를 얻지 못했음에도 불구하고 수년간 이 나라를 하나로 이끌었으며, 그의 죽음으로 러시아는 혼란에 빠졌습니다. 상원 의원은 케렌스키의 대체자에 대해 이미 논의하고 있으며, 좌파와 우파 양측 모두 새로운 연합이 형성되고있는 반면, 데니키, 브란겔, 코르닐로프와 같은 군인들은 민주주의를 해산하고 '어머니 러시아'를 지키기위해 위해 개입을 준비하고 있습니다..."
 worldnews.15.a:0 "야만적이군!"
 
 worldnews.16.t:0 "플라타 전쟁"
@@ -71,18 +71,18 @@ worldnews.17.t:0 "아랍 회의"
 worldnews.17.d:0 "세계대전의 아랍 반란은 주로 협상국의 패배로 인해 실패하였고, 레반트와 이라크에 살고있는 수백만의 아랍인들은 오스만 제국의 지배하에 있었습니다. 그럼에도 불구하고 아랍 민족주의는 수년간 상승해 왔으며 마침내 카이로에서 아랍 회의가 시작될 때 마침내 절정에 이르렀다. 수많은 아랍 국가 대표들이 이집트 댄서들의 화려한 공연과 대포의 축포로 환영받았으며 협상이 시작되었습니다. \n\n 전문가들은 이집트와 하미미트 아라비아가 회의를 이끌것이라고 예상합니다. 회의는 오스만 제국에 대한 괴로움과 때로는 터키에 대한 아랍의 '추축국'에 대한 토론까지 자유롭게 진행될 수 있습니다."
 worldnews.17.a:0 "전에 이걸 본 적이 있는거 같은데..."
 
-worldnews.18.t:0 "베오그라드 조약의 비준"
-worldnews.18.d:0 "세르비아, 루마니아, 그리스 등 발칸의 협상국 회원국이 협상에 모여 최근 베오그라드 협약 (Belgrade Pact)의 비준을 발표했다. 이 협정은 문화에 관한 토의에 중점을 두고 발칸의 정체성을 보존하는 한편 참가자들간의 군사동맹을 담고있는데, 이는 그들의 국가를 분리시키고 그들의 조상땅을 점령하고 있는 나라를 겨냥한것으로 보입니다.. \n\n이 새로운 전개는 불가리아의 발칸 지배에서 큰 가시지만, 다른 중앙 강대국의 반응만이 이 조약이 어떤 과일을 얻을 것인지 결정할 수 있습니다."
+worldnews.18.t:0 "베오그라드 협약의 비준"
+worldnews.18.d:0 "세르비아, 루마니아, 그리스 등 발칸의 협상국 회원국이 협상에 모여 최근 베오그라드 협약 (Belgrade Pact)의 비준을 발표했습니다. 이 협정은 문화에 관한 토의에 중점을 두고 발칸의 정체성을 보존하는 한편 참가자들간의 군사동맹을 담고있는데, 이는 그들의 국가를 분리시키고 그들의 조상땅을 점령하고 있는 나라를 겨냥한것으로 보입니다.. \n\n이 새로운 전개는 불가리아의 발칸 지배에서 큰 가시지만, 다른 중앙 강대국의 반응만이 이 조약이 어떤 과일을 얻을 것인지 결정할 수 있습니다."
 worldnews.18.a:0 "발칸 반도에서 또 다른 세계 대전을 시작하지 않기를 바래야겠군."
 worldnews.18.b:0 "모두 불가리아를 배척하자!"
 worldnews.18.c:0 "이거 좋아보이지 않네..."						
 
 worldnews.19.t:0 "5차 앵글로-아프가니스탄 전쟁"
-worldnews.19.d:0 "세계대전 이후 영국령 인도가 혼란과 전쟁으로 무너지면서 이웃인 아프가니스탄 왕국은 이를 자치령의 두 국경 지역인 Peshawar와 Quetta를 탈취 할 수 있는 기회로 활용했습니다. 그러나 지난 수십 년간 근대화하려는 아프가니스탄 정부의 시도는 파키스탄내의 보수적인 요소들의 격렬한 저항에 부딪쳤습니다. Amanullah 칸은 현재 조지 5세가 죽은 후 델리에서 혼란을 겪기를 바라고 있습니다. 칸은 4차 앵글로-아프간 전쟁의 성공을 반복함으로써 보수 야당을 침묵시키고 왕국에 새로운 땅을 가져 오기를 희망합니다. 그러나 국제 전문가들은 작은 산악 국가가 승리할것이라고는 생각하지 않습니다."
+worldnews.19.d:0 "세계대전 이후 영국령 인도가 혼란과 전쟁으로 무너지면서 이웃인 아프가니스탄 왕국은 이를 자치령의 두 국경 지역인 페샤와르와 퀘타를 탈취 할 수 있는 기회로 활용했습니다. 그러나 지난 수십 년간 근대화하려는 아프가니스탄 정부의 시도는 파키스탄내의 보수적인 요소들의 격렬한 저항에 부딪쳤습니다. 아마눌라 칸은 현재 조지 5세가 죽은 후 델리에서 혼란을 겪기를 바라고 있습니다. 칸은 4차 앵글로-아프간 전쟁의 성공을 반복함으로써 보수 야당을 침묵시키고 왕국에 새로운 땅을 가져 오기를 희망합니다. 그러나 국제 전문가들은 작은 산악 국가가 승리할것이라고는 생각하지 않습니다."
 worldnews.19.a:0 "누가 아프가니스탄에 관심이 있을까?"
 
 worldnews.20.t:0 "미국 민주주의의 종식"
-worldnews.20.d:0 "놀라운 뉴스가 오늘 미국에서 도착했습니다. 분열된 국가를 안정시키지 못하고 CSA와 AFP 무장 세력을 진정시킬 수 없다는 것을 증명한 하버드 후버 대통령의 정부는 더글라스 맥아더 장군에게 군부와 기업 대표들과 함께이 나라의 고삐를 맡을 것을 요청했습니다. \n\n 맥아더 대통령은 '철권 통치'의 강력한 지지자이며 생디칼리즘과 미국 평화주의에 반대합니다. '미국의 적'에 대한 대규모 단속은 이미 보고된바 있습니다."
+worldnews.20.d:0 "놀라운 뉴스가 오늘 미국에서 도착했습니다. 분열된 국가를 안정시키지 못하고 CSA와 AFP 무장 세력을 진정시킬 수 없다는 것을 증명한 하버드 후버 대통령의 정부는 더글라스 맥아더 장군에게 군부와 기업 대표들과 함께 이 나라의 고삐를 맡을 것을 요청했습니다. \n\n 맥아더 대통령은 '철권 통치'의 강력한 지지자이며 생디칼리즘과 미국 평화주의에 반대합니다. '미국의 적'에 대한 대규모 단속은 이미 보고된바 있습니다."
 worldnews.20.a:0 "골치아프군."
 
 worldnews.21.t:0 "휴이 롱이 미국 대통령으로 선출되었습니다"
