--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -149,8 +149,8 @@ worldnews.35.t:0 "프랑스에서 아나키스트정당이 선출되었습니다
 worldnews.35.d:0 "프랑스의 공동체는 세계 생디칼리스트의 주도 국가이며, 도시 공동체(코뮌)의 연합체로서 공안위원회가 이끌고 있습니다. 그러나 창립 이래로 제 2 코뮌은 그 정책에서 통일된것이 아니었습니다. 많은 진영이 생겨났고, 각 진영마다 프랑스가 취해야 할 경로에 대한 자신만의 아이디어가 있었습니다. 독일에 대한 복수와 세계 혁명의 시간이 다가옴에 따라 1936 년 노동 총의회 선거는 매우 중요하게 되었습니다... \n\n마르소 피베르의 불명예스로운 교체는 우크라이나 혁명가인 Nestor Makhno에 의해 영감을 얻은 아나키스트들에 의해 발생했습니다. 아나키스트정당은 현재 CSP를 이끌어 가고 있으며 지역의 자유와 CSP의 권력을 과감히 줄이는데 찬성합니다."
 worldnews.35.a:0 "흥미롭군."
 
-worldnews.36.t:0 "프랑스의 선거 그리드락(정체)"
-worldnews.36.d:0 "프랑스의 공동체는 세계 생디칼리스트의 주도 국가이며, 도시 공동체(코뮌)의 연합체로서 공안위원회가 이끌고 있습니다. 그러나 창립 이래로 제 2 코뮌은 그 정책에서 통일된것이 아니었습니다. 많은 진영이 생겨났고, 각 진영마다 프랑스가 취해야 할 경로에 대한 자신만의 아이디어가 있었습니다. 독일에 대한 복수와 세계 혁명의 시간이 다가옴에 따라 1936 년 노동 총의회 선거는 매우 중요하게 되었습니다... \n\n 4개의 파벌 중 누구도 다수석을 얻을 수 없었습니다. 선거전과 마찬가지로 연정이 설립되어야하지만, 코뮌의 정치 형태는 어떻게 변할지는 CSP에 있는 사람들만이 알고 있습니다."
+worldnews.36.t:0 "프랑스의 선거 교착"
+worldnews.36.d:0 "프랑스의 공동체는 세계 생디칼리스트의 주도 국가이며, 도시 공동체(코뮌)의 연합체로서 공안위원회가 이끌고 있습니다. 그러나 창립 이래로 제 2 코뮌은 그 정책에서 통일된것이 아니었습니다. 많은 진영이 생겨났고, 각 진영마다 프랑스가 취해야 할 경로에 대한 자신만의 아이디어가 있었습니다. 독일에 대한 복수와 세계 혁명의 시간이 다가옴에 따라 1936 년 노동 총의회 선거는 매우 중요하게 되었습니다... \n\n 4개의 파벌 중 누구도 다수석을 얻지 못했습니다. 선거 전과 마찬가지로 연정이 설립되어야 하지만, 코뮌의 정치 형태는 어떻게 변할지는 CSP에 있는 사람들만이 알고 있습니다."
 worldnews.36.a:0 "흥미롭군."
 
 worldnews.37.t:0 "4차 발칸 전쟁"
@@ -381,7 +381,7 @@ worldnews.89.t:0 "포르투갈에서 아나키스트 쿠데타가 일어나다!"
 worldnews.89.d:0 "스페인의 CNT-FAI의 최근 성공에서 고무받은 것으로 알려진 아나키스트-생디칼리스트 운동인 포르투칼 아나키스트 연합(União Anarquista Portuguesa)가 주도한 포르투갈의 수도 리스본의 폭동다음날, 포르투갈 정부에 맞선 깜짝 쿠데타가 성공했습니다. 아나키스트 민병대가 수도의 건물로 이동했고, 혁명의 지도자인 네노 바스코 (Neno Vasco)와 안토니오 핀토 쿼탄(António Pinto Quartin)이 임시 체제를 구축했습니다. 새로운 지도자들은 장래에 [CNT.GetNameDef]와 더 긴밀한 관계를 추구 할 것으로 보입니다."
 worldnews.89.a:0 "혁명이 퍼지기 시작했다 - 무서운 속도로!"
 
-worldnews.90.t:0 "영국의 선거 그리드락(정체)"
+worldnews.90.t:0 "영국의 선거 교착"
 worldnews.90.d.fuck_it:0 "1936년 영국 노동 조합 총회가 마무리되었습니다. 필립 스노덴 TUC 위원장이 사의를 표명함에 따라, 극단주의자, 자치주의자, 연방주의자, 회중론자 등 네 가지 주요 파벌이 그 자리를 두고 경쟁했습니다. \n\n 분란이 가라앉기는 했지만, 이 치열한 선거에서 선두를 차지한 정당은 없었습니다. 불안정이 고조되고 모든 파벌들이 표의 재검 또는 새로운 선거를 요구하자, TUC는 마침내 연방주의자 톰 만을 중재자로 선출하기로 결정했습니다. 많은 사람들에게 이것은 브리튼 연방에서의 정치적 타성의 출현으로 받아들여집니다."
 worldnews.90.d.vote_again:0 "1936년 영국 노동 조합 총회가 마무리되었습니다. 필립 스노덴 TUC 위원장이 사의를 표명함에 따라, 극단주의자, 자치주의자, 연방주의자, 회중론자 등 네 가지 주요 파벌이 그 자리를 두고 경쟁했습니다. \n\n 분란이 가라앉기는 했지만, 이 치열한 선거에서 선두를 차지한 정당은 없었습니다. 불안정이 고조되고 모든 파벌들이 표의 재검 또는 새로운 선거를 요구하자, TUC는 마침내 내년에 선거를 다시 치르기로 결정했습니다. 많은 사람들에게 이것은 브리튼 연방에서의 정치적 타성의 출현으로 받아들여집니다."
 worldnews.90.a:0 "흥미롭군."
