--- a/Kaiserreich Korean Translation/localisation/KR_Literature_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Literature_l_english.yml
@@ -9,7 +9,7 @@ literature.2.d:0 "The history of French literature is unique. It is comprised of
 literature.2.a:0 "I want more!"
 
 literature.3.t:0 "클로드 레비스트로스 - 그를 어떻게 하면 좋을까??"
-literature.3.d:0 "클로드 레비스트로스는 세계적으로 유명한 철학자이자 인류학자, 민족학자입니다. 그는 베두인족에 대대 탁월하고 통찰력이 있는 연구를 내놓았습니다. 그 작품은 프랑스 공화국에서 금지되었지만 이탈리아와 오스만 제국으로 밀수되어 번역되었습니다. 젊은 과학자로 엄청난 명성을 얻었지만, 프랑스 공화국 정부는 그를 좋지 않게 보고 있습니다. 친사회주의적 시각이 원인이 되어 그는 반정부적인 문학 작품을 제작한 죄로 1933년부터 1935년까지 2년간 수감되었습니다. 이제 그는 다른 곳으로 이민을 가고 싶어 합니다. 우리 첩보 기관은 그가 프랑스 코뮌으로 뜨고 싶어한다는 의심을 품고 있습니다. 그를 어떻게 대할까요?"
+literature.3.d:0 "클로드 레비스트로스는 세계적으로 유명한 철학자이자 인류학자, 민족학자입니다. 그는 베두인족에 대 탁월하고 통찰력이 있는 연구를 내놓았습니다. 그 작품은 프랑스 공화국에서 금지되었지만 이탈리아와 오스만 제국으로 밀수되어 번역되었습니다. 젊은 과학자로 엄청난 명성을 얻었지만, 프랑스 공화국 정부는 그를 좋지 않게 보고 있습니다. 친사회주의적 시각이 원인이 되어 그는 반정부적인 문학 작품을 제작한 죄로 1933년부터 1935년까지 2년간 수감되었습니다. 이제 그는 다른 곳으로 이민을 가고 싶어 합니다. 우리 첩보 기관은 그가 프랑스 코뮌으로 뜨고 싶어한다는 의심을 품고 있습니다. 그를 어떻게 대할까요?"
 literature.3.a:0 "종신형에 처하게 한다!"
 literature.3.b:0 "놓아준다. 그는 우리에게 아무것도 하지 않을 것이다!"
 
