--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -403,13 +403,13 @@ worldnews.94.d:0 "파리에서 개최 된 제 1 차 생디칼리스트 인터내
 worldnews.94.a:0 "흥미롭군."
 
 
-worldnews.95.t:0 "백 루테니아의 민족주의자 쿠데타"
-worldnews.95.d:0 "세계대전 이후, 독일인들은 비록 지역 인구가 이전에는 단 하나의 국가로 생각된적은 없었지만, 백 루테니아 지역에 벨로루스 국가를 형성했습니다. 이러한 민족 정체성의 결여는 독일인들이 이 나라에 그들의 질서를 강요하는것을 멈추게하지 못했으며, 이로 인해 이제는 긴장이 고조되었습니다. \n\n백 루테니아의 벨로루시 민족주의자 지도자인 시그문트 (Sigismund)는 전임 왕이 극장 폭발로 사망 한 후 이 나라를 장악했습니다. 시그문트 1세가 독일군에 반항할지, 아니면 독일이 이 새로운 질서를 받아들이기를 기대하면서 기다릴지의 여부는 알기 어렵습니다."
+worldnews.95.t:0 "백루테니아의 민족주의자 쿠데타"
+worldnews.95.d:0 "세계대전 이후, 독일인들은 비록 지역 주민들이 이전에는 단 하나의 국가라고 생각한 적은 없었지만, 백루테니아 지역에 벨라루스 국가를 형성했습니다. 이러한 민족 정체성의 결여는 독일인들이 이 나라에 그들의 질서를 강요하는것을 멈추게 하지 못했으며, 이로 인해 긴장이 고조되었습니다. \n\n백루테니아의 벨로루시 민족주의자 지도자인 시그문트 (Sigismund)는 전임 왕이 극장 폭발로 사망 한 후 이 나라를 장악했습니다. 시그문트 1세가 독일군에 반항할지, 아니면 독일이 이 새로운 질서를 받아들이기를 기대하면서 기다릴지의 여부는 알기 어렵습니다."
 worldnews.95.a:0 "흥미롭군."
 
 
 worldnews.96.t:0 "리투아니아에서 친러시아 쿠데타"
-worldnews.96.d:0 "매우 낮은 확률에도 불구하고 리투아니아 공화국은 중부 유럽과의 전쟁에서 살아 남았고 강력해졌습니다. - 하지만 그들을 향한 다음 도전은 내부에서 일어났습니다. 억압당하는 러시아, 폴란드, 벨로루스 소수 민족은 반 민족주의 운동으로 뭉쳤고, 그들은 일어났습니다. \n\n 카쉬미르 티스즈키에비츠가 이끄는 소위 '해방 연합'은 빌니우스를 장악하고 이 지역을 친 러시아 왕국으로 개편했습니다. 전문가들은 인력과 장비의 단점에도 불구하고 러시아가 개입한점이 동맹의 놀라운 승리의 원인이라고 생각합니다."
+worldnews.96.d:0 "매우 낮은 확률에도 불구하고 리투아니아 공화국은 중부 유럽과의 전쟁에서 살아 남았고 강력해졌습니다. - 하지만 그들을 향한 다음 도전은 내부에서 일어났습니다. 억압당하는 러시아, 폴란드, 벨라루스 소수 민족은 반 민족주의 운동으로 뭉쳤고, 그들은 일어났습니다. \n\n 카쉬미르 티스즈키에비츠가 이끄는 소위 '해방 연합'은 빌니우스를 장악하고 이 지역을 친 러시아 왕국으로 개편했습니다. 전문가들은 인력과 장비의 단점에도 불구하고 러시아가 개입한점이 동맹의 놀라운 승리의 원인이라고 생각합니다."
 worldnews.96.a:0 "From one overlord to the arms of another..."
 
 
