--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -368,13 +368,13 @@ worldnews.85.d.car:0 "오늘, 무정부주의자들과 칼리스트 무정부주
 worldnews.85.a:0 "스페인에 평화가 찾아왔다!"
 
 worldnews.86.t:0 "스페인 내전이 끝나다"
-worldnews.86.d:0 "마침내 스페인 내전이 끝났고 [SPR.GetNameDef]가 승리 한 것으로 보입니다. 시골의 대부분은 폐허가 되었고 질서는 완전히 회복되지는 않았지만 [SPR.GetAdjective] 정부는 아나키스트와 생디칼리스트의 위협이 마침내 사라졌으며 다시는 발생하지 않을 것이라고 발표했습니다. 비록 내전이 일어나기 직전에 혼수 상태에 빠졌습니다만, 이것은 알폰소 13 세의 승리입니다."
+worldnews.86.d:0 "마침내 스페인 내전이 끝났고 [SPR.GetNameDef] 승리 한 것으로 보입니다. 시골의 대부분은 폐허가 되었고 질서는 완전히 회복되지는 않았지만 [SPR.GetAdjective] 정부는 아나키스트와 생디칼리스트의 위협이 마침내 사라졌으며 다시는 발생하지 않을 것이라고 발표했습니다. 비록 내전이 일어나기 직전에 혼수 상태에 빠졌습니다만, 이것은 알폰소 13 세의 승리입니다."
 worldnews.86.a:0 "현상태 유지되었다..."
 
 worldnews.87.d:0 "마침내 스페인 내전이 끝났고 [CNT.GetNameDef]가 승리 한 것으로 보입니다. 시골의 대부분은 폐허가 되었고 질서는 완전히 회복되지는 않았지만 [CNT.GetAdjective] 정부는 오래된 봉건제도가 마침내 끝났으며 스페인 사람들은 이제 생디칼리즘의 통치하에 질서 정연한 변화의 혜택을 볼 것이라고 발표했습니다. 돌아오는 민병대를 환영하고 새로운 평화가 영원히 지속되기를 기도하기 위해 바르셀로나에 대규모 군중이 모여들었습니다."
 worldnews.87.a:0 "또 다른 유럽의 오래된 나라가 생디칼리즘의 손에 떨어졌군."
 
-worldnews.88.d:0 "마침내 스페인 내전이 끝났고카를로스파가 승리 한 것으로 보입니다. 시골의 대부분은 폐허가 되었고 질서는 완전히 회복되지는 않았지만 오늘, 새로운 왕인 하비에르 1세를 맞이하기 위해 거대한 군중이 부르고스에 모였습니다. 왕은 이 날을 공휴일로 선언했고, 스페인의 위선자들에게 정의의 심판이 내려졌으며, 카를로스 왕실은 정확히 있어야 할 곳에 서있다고 이야기했습니다. 그는 전국적인 가톨릭 신앙의 회복뿐만 아니라 국가의 회복을 약속했습니다. 그의 약속은 교황의 승인을 받았으며, 교황은 스페인에 새로운 평화가 지속되길 바라는 기도를 했습니다."
+worldnews.88.d:0 "마침내 스페인 내전이 끝났고 카를로스파가 승리 한 것으로 보입니다. 시골의 대부분은 폐허가 되었고 질서는 완전히 회복되지는 않았지만 오늘, 새로운 왕인 하비에르 1세를 맞이하기 위해 거대한 군중이 부르고스에 모였습니다. 왕은 이 날을 공휴일로 선언했고, 스페인의 위선자들에게 정의의 심판이 내려졌으며, 카를로스 왕실은 정확히 있어야 할 곳에 서있다고 이야기했습니다. 그는 전국적인 가톨릭 신앙의 회복뿐만 아니라 국가의 회복을 약속했습니다. 그의 약속은 교황의 승인을 받았으며, 교황은 스페인에 새로운 평화가 지속되길 바라는 기도를 했습니다."
 worldnews.88.a:0 "흥미롭군."
 
 worldnews.89.t:0 "포르투갈에서 아나키스트 쿠데타가 일어나다!"
