--- a/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
@@ -757,16 +757,16 @@ canada.52.a:0 "루이스 에반과 사회 신용당"
 canada.52.b:0 "뒤플레시스와 민족 연합"
 
 canada.53.t:0 "대서양 해군 훈련"
-canada.53.d:0 "국제적인 상황이 악화되고 있는 상황에서, 우리가 우리의 힘을 보여 주고 대서양에서 자유로운 통행권을 행사하는 것이 반드시 필요합니다. 이를 위해 해군 본부는 북 대서양에서 광범위한 함대의 기동과 군사 훈련을 계획해 왔습니다. 어떻게 진행할까요?"
-canada.53.a:0 "우리의 힘을 보여줘라! 영국과 아일랜드 해안에서 대규모 훈련을 하세요."
-canada.53.b:0 "우리의 힘을 보여줘라! 북해에서 대규모 훈련을 하세요."
-canada.53.c:0 "우리의 힘을 보여줘라! 아메리카 해안에서 대규모 훈련을 하세요."
-canada.53.e:0 "딴말하지 말고. 캐나다 영해에서 정상적인 연습을 하시오."
+canada.53.d:0 "국제적인 상황이 험악해지고 있는 지금, 우리는 우리의 힘을 보여 주고 대서양에서 자유로운 통행권을 행사하는 것이 필수적입니다. 이를 위해 해군 본부는 북 대서양에서의 광범위한 함대 기동과 워 게임 모델을 계획해 왔습니다. 어떻게 진행할까요?"
+canada.53.a:0 "우리의 힘을 보여 줘라! 영국과 아일랜드 연안에서 대규모 훈련을 개시한다." 
+canada.53.b:0 "우리의 힘을 보여 줘라! 북해에서 대규모 훈련을 개시한다."  
+canada.53.c:0 "우리의 힘을 보여 줘라! 미국 연안에서 대규모 훈련을 개시한다." 
+canada.53.e:0 "굳이 위험을 감수할 필요는 없다. 캐나다 영해에서 정상적으로 훈련을 개시한다." 
 
-canada.54.t:0 "아일랜드-캐나다 조약"
-canada.54.d:0 "캐나다 사람들은 우리에게 방위 협력 조약을 제안하였습니다. 그들은 군사 기본권에 대한 대가로 생디칼리즘에 대한 우리의 주권을 보장해 줄 것입니다. 이것은 우리를 생디칼리즘에 맞서 안전하게 해 주고 캐나다 사람들의 경제적 도움에 문을 열어 줄 수는 있지만, 브리튼 연방을 적대시하게 만들 위험이 있습니다. 하지만, 거절하는 것은 캐나다인들이 먼저 행동을 취하게 만들 수도 있습니다. 어떻게 진행해야 할까요?"
-canada.54.a:0 "조약에 서명하다. 이것이 아름다운 우정의 시작이 될 것이다."
-canada.54.b:0 "조약을 거부하다. 대서양의 어느 한쪽에 있는 영국을 믿을 수 없다."
+canada.54.t:0 "아일랜드-캐나다 조약" 
+canada.54.d:0 "캐나다인들은 우리에게 방위 협력 조약을 제안하였습니다. 그들은 군사 기본권에 대한 대가로 생디칼리즘에 대한 우리의 주권을 보장해 주겠다고 약속했습니다. 이것은 우리를 생디칼리즘에 맞서 보다 안전하게 해 주고 캐나다의 경제 향상에 문을 열어 줄 수는 있지만, 브리튼 연방을 분노하게 만들 위험이 있습니다. 하지만, 우리가 거절한다면 캐나다인들이 먼저 행동을 취해 버릴수도 있습니다. 어떻게 해야 할까요?" 
+canada.54.a:0 "조약에 서명해라. 아름다운 우정의 첫걸음이 될 것이다." 
+canada.54.b:0 "조약을 거부해라. 그들이 대서양의 어느 쪽에 있든 영국인은 믿을 수 없는 족속들이다." 
 
 canada.55.t:0 "아일랜드가 조약을 승인하다"
 canada.55.d:0 "아일랜드 사람들은 우리가 유럽에 발을 들여놓고 아일랜드 사람들과 더 협력할 수 있는 기회를 제공하는 조약의 조건에 동의했습니다. 시간이 도움된다면, 그들이 협상국의 정식 회원이 되는 것을 설득할 수도 있습니다."
