--- a/Kaiserreich Korean Translation/localisation/KR_United_Kingdom_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_United_Kingdom_l_english.yml
@@ -394,33 +394,33 @@ uk.1001.t:0 "해방의 날"
 uk.1001.d:0 "오늘 영국은 국가 전역에 걸쳐 상점과 공장들이 문을 닫았는데, 이는 오늘이 생디칼리즘에 맞선 지난 투쟁에서 목숨을 잃은 사람들을 기리기 위한 추모의 날이기 때문입니다. 런던에 있는 왕궁에서 열린 이 날의 주요 행사에 에드워드 8세와 왕실 구성원, 정치와 군사계의 주요 인사들이 참석했고, 근위대가 거리를 행진했습니다. 두 번 다시 공원에서 왕이 침통한 표정으로 모여있는 사람들에게 연설할 일도, 생디칼리즘이 수 세기에 걸쳐 내려온 영국인들의 자유를 위협할 일도 없을 것을 것입니다. 생디칼리즘의 희생자들을 애도하며, 해방의 날인 오늘 우리는 우리가 소중한 것들을 너무나도 많이 잃었다는 것과, 동시에 우리가 무엇과도 바꿀 수 없는 교훈들을 얻었다는 것을 다시금 돌아보고 있습니다."
 uk.1001.a:0 "조국과 국왕 폐하를 위하여!"
 
-uk.1700.t:0 "Canadian technology for Britain"
-uk.1700.d:0 "Now that the United Kingdom has been restored, Canadian technical expertise is flowing onto the island. Many technology companies have already set up shop across the pond again."
-uk.1700.a:0 "For Science!"
+uk.1700.t:0 "캐나다의 영국 기술"
+uk.1700.d:0 "연합 왕국이 복원된 지금, 캐나다에 망명했던 기술자들이 영국 본토로 복귀하고 있으며, 많은 기술 회사가 이미 대서양을 건너 브리튼 섬에 재정착하는 중입니다."
+uk.1700.a:0 "과학 만세!"
 
 ### The Second Glorious Revolution ###
-uk.6.t:0 "The Second Glorious Revolution"
-uk.6.d:0 "Once again, the British people decided to overthrow a tyrannical regime and invite their righteous monarch back to reign over them. This time, they just needed a little more convincing. The new order is firmly established by now. The Syndicalist experiment in Britain is over."
-uk.6.a:0 "Horrible!"
-uk.6.b:0 "Glorious!"
+uk.6.t:0 "제 2 명예 혁명"
+uk.6.d:0 "다시 한번, 영국인들은 압제적인 정권을 전복시키고 그들의 자비로운 군주에게 다시 그들 위에 군림해 달라 요청하기로 결정했습니다.. 이번에는 좀 더 설득력 있게 말이죠. 현재 새로운 질서가 확립되었고, 생디칼리스트들의 실험적인 정권은 실패로 끝났습니다."
+uk.6.a:0 "끔찍하군!"
+uk.6.b:0 "영광이군."
 ### The British Reconstruction Authority ###
-uk.7.t:0 "The British Reconstruction Authority"
-uk.7.d:0 "While the monarchy has been restored to the British Isles, the country needs time to go through de-syndicalisation. The country's rule under syndicalism up ended much not just in politics and economics but also in terms of society. To help in the rule of that, the British Reconstruction Authority or BRA for short, has been created and granted wide governing powers to help rejuvenate Britain again."
-uk.7.a:0 "God Save Britain"
+uk.7.t:0 "영국 재건 협의회"
+uk.7.d:0 "왕실이 브리튼 섬에 다시 군림했고, 영국은 생디칼리즘의 잔재를 없애기 위한 노력을 쏟고 있습니다. 생디칼리스트들이 바꿔놓은 정치 및 경제 체계는 복구되었고, 생디칼리즘 통치기에 대한 일을 함부로 언급하는 것은 사회적으로 금기시 되었습니다. 영국 내 생디칼리즘의 완전한 제거를 위해, 통칭 B.R.A로 불리는 영국 재건 협의회 당국이 설립되었습니다. 이들은 영국 내의 혼란을 잠재우고 원활한 재건을 돕기 위해 광범위한 권한을 부여받았습니다."
+uk.7.a:0 "신께서는 영국을 수호하소서" 
 ### Return of the Aristocracy ###
-uk.8.t:0 "Return of the Aristocracy"
-uk.8.d:0 "With the triumph of the Royalists, the aristocracy has returned to Britain, only to find that their former lands had been expropriated by the Syndicalists and redistributed to peasants and farmers. These aristocrats naturally wish to have their land returned to them. Doing so will cause a great deal of disruption to the average person in Britain, not to mention anger them. It might be wiser to compensate the nobles for their loses."
-uk.8.a:0 "Restore the Nobility's land"
-uk.8.b:0 "Compensate the Nobility for their loss"
-uk.9.t:0 "The House of Lords?"
-uk.9.d:0 "In expectation of the first free general election in over a decade, the House of Commons has been refurbished and its powers delineated. The question about the role of the House of Lords have come up and is proving divisive and many wonder if the British will still accept the House of Lords having a significant political role."
-uk.9.a:0 "The House of Lords is as Important as the House of Commons"
-uk.9.b:0 "Only One Chamber is Needed"
+uk.8.t:0 "귀족들의 귀환"
+uk.8.d:0 "왕당파들이 대승을 거둔 이후, 귀족들 역시 영국 본토에 돌아왔지만, 그들은 가문 대대로 내려온 그들의 영지가 생디칼리스트들에게 압류당한 후 소작농과 농부들에게 분배되었다는 사실을 알게 되었습니다. 귀족들은 자신들이 정당히 소유하고 있던 땅과 자산을 돌려받고 싶어하지만, 그렇게 한다면 두 말할 필요도 없이 많은 영국 내의 서민층들이 분노할 것입니다. 무엇이 현명한 선택일까요?"
+uk.8.a:0 "귀족들의 영지를 반환하라."
+uk.8.b:0 "귀족들의 손해를 배상해 줘라."
+uk.9.t:0 "상원?"
+uk.9.d:0 "근 10년 만에 이뤄지는 자유 선거에 대비해, 하원의 구조와 권한이 개편되었습니다. 문제는 분열과 내분을 일삼고 있는 상원의 능력에 의문이 제기되고 있으며, 영국이 과연 지금 상태의 상원이 가진 권한을 수용할 것인지에 대한 것입니다."
+uk.9.a:0 "상원은 하원만큼이나 중요하다." 
+uk.9.b:0 "하원 하나만으로도 충분하다."
 ### The First Election ###
-uk.10.t:0 "The Progressive Party"
-uk.10.d:0 "While the three main political parties of the former exiles are preparing for the imminent general election, a fourth party has been organising. Known as the Progressive Party, it includes prominent intellectuals and other figures on the left, including some who had remained in Britain during the Syndicalist Interregnum. Some fear that the Progressives are merely a front for Syndicalism, and that letting the party contest the general election will open the door for Syndicalist sympathisers to regain power."
-uk.10.a:0 "Do not Ban them"
-uk.10.b:0 "Ban them!"
+uk.10.t:0 "진보적인 정당"
+uk.10.d:0 "망명에서 돌아온 세 주요 정당이 임박한 총선을 준비하고 있는 와중에도 제4당은 여전히 조직되고 있으며 진보 정당으로 알려져 있는 이 당에는 생디칼리스트 의혹을 받은 사람이나 과거 몸담았던 사람들도 포함되어 있다. 일부에서는 이들이 진보를 가장한 생디칼리스트들에 불과하고, 이들의 총선 참여를 허가하게 되면 생디칼리즘이 세력을 회복할 길이 열릴 것이라는 우려도 있다."
+uk.10.a:0 "그들을 탄압하지 마라"
+uk.10.b:0 "금지해라!"
 
 uk.11.t:0 "British General Election"
 uk.11.d:0 "After several months of preparations, the provisional government has completed arrangements for the first free election in Great Britain since the liberation. The King has formally issued the writ for the 660 seats in the House of Commons, and the various political parties have begun their campaigns."
