--- a/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
@@ -1086,7 +1086,7 @@ POLITICS_PHILIP_SNOWDEN_DESC:0 "The mild-mannered Viscount almost shouldn't have
 ENG_trade_union_congress_desc:0 "Until the next year, the Trade Union Congress will have to work without a Chairman."
 
 ### Parties ###
-ENG_totalist_party:0 "마르크스주의자"
+ENG_totalist_party:0 "극단주의"
 ENG_totalist_party_long:0 "Maximist wing of the TUC"
 ENG_syndicalist_party:0 "Feds/Cons"
 ENG_syndicalist_party_long:0 "Federationist/Congregationist wing of the TUC"
