--- a/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
@@ -1086,29 +1086,29 @@ POLITICS_PHILIP_SNOWDEN_DESC:0 "The mild-mannered Viscount almost shouldn't have
 ENG_trade_union_congress_desc:0 "Until the next year, the Trade Union Congress will have to work without a Chairman."
 
 ### Parties ###
-ENG_totalist_party:0 "극단주의"
+ENG_totalist_party:0 "극단주의자"
 ENG_totalist_party_long:0 "Maximist wing of the TUC"
-ENG_syndicalist_party:0 "Feds/Cons"
+ENG_syndicalist_party:0 "연방/회중"
 ENG_syndicalist_party_long:0 "Federationist/Congregationist wing of the TUC"
-ENG_CON_syndicalist_party:0 "Congregationists"
+ENG_CON_syndicalist_party:0 "회중주의"
 ENG_CON_syndicalist_party_long:0 "Congregationist wing of the TUC"
-ENG_FED_syndicalist_party:0 "Federationists"
+ENG_FED_syndicalist_party:0 "연방주의"
 ENG_FED_syndicalist_party_long:0 "Federationist wing of the TUC"
-ENG_radical_socialist_party:0 "Autonomists"
-ENG_BLR_radical_socialist_party:0 "Populists"
+ENG_radical_socialist_party:0 "자치주의"
+ENG_BLR_radical_socialist_party:0 "인민주의"
 ENG_radical_socialist_party_long:0 "Autonomist wing of the TUC"
 ENG_BLR_radical_socialist_party_long:0 "Blair's Populist Clique"
-ENG_social_democrat_party:0 "Social Democrats"
-ENG_social_democrat_party_long:0 "Social Democrats"
-ENG_social_liberal_party:0 "Social Liberals"
-ENG_social_liberal_party_long:0 "Social Liberals"
-ENG_market_liberal_party:0 "Market Liberals"
-ENG_market_liberal_party_long:0 "Market Liberals"
-ENG_social_conservative_party:0 "Social Conservatives"
-ENG_social_conservative_party_long:0 "Social Conservatives"
-ENG_authoritarian_democrat_party:0 "Authoritarian Democrats"
-ENG_authoritarian_democrat_party_long:0 "Authoritarian Democrats"
-ENG_paternal_autocrat_party:0 "Paternal Autocrats"
-ENG_paternal_autocrat_party_long:0 "Paternal Autocrats"
-ENG_national_populist_party:0 "National Populists"
-ENG_national_populist_party_long:0 "National Populists"
+ENG_social_democrat_party:0 "사회 민주주의"
+ENG_social_democrat_party_long:0 "사회 민주주의"
+ENG_social_liberal_party:0 "사회 진보주의"
+ENG_social_liberal_party_long:0 "사회 진보주의"
+ENG_market_liberal_party:0 "시장 자유주의"
+ENG_market_liberal_party_long:0 "시장 자유주의"
+ENG_social_conservative_party:0 "사회 보수주의"
+ENG_social_conservative_party_long:0 "사회 보수주의"
+ENG_authoritarian_democrat_party:0 "권위민주주의"
+ENG_authoritarian_democrat_party_long:0 "권위민주주의"
+ENG_paternal_autocrat_party:0 "조국 전제군주주의"
+ENG_paternal_autocrat_party_long:0 "조국 전제군주주의"
+ENG_national_populist_party:0 "국가인민주의"
+ENG_national_populist_party_long:0 "국가인민주의"
