--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -1,40 +1,40 @@
 l_english:
 
 ### Focuses - Army ###
-TEX_second_revolution:0 "The Second American Revolution"
+TEX_second_revolution:0 "2차 미국 혁명"
 TEX_second_revolution_desc:0 "The Second American Revolution is now upon us. Like the founding fathers before us, it is time to strike for freedom and democracy. America shall be reborn under a new generation of founding fathers."
-TEX_civil_war_tooltip:0 "The Civil War Begins..."
-TEX_military:0 "Building our Military"
+TEX_civil_war_tooltip:0 "내전이 시작됩니다..."
+TEX_military:0 "우리의 육군을 만들자"
 TEX_military_desc:0 "With the civil war upon us we need to build a new army that can lead America to her true glory and greatness."
-TEX_army:0 "The Patriotic American Army"
+TEX_army:0 "애국적인 미국 군대"
 TEX_army_desc:0 "With the civil war upon us we need a Patriotic American Army. One that will follow the true values of what it means to be an American and not the fat cats or the anarchists."
 TEX_pattons_mobility_plan_desc:0 "Of the various plans for the military, let us support General Patton's mobility plan. This is a plan that focus heavily on tanks and mechanised infantry."
-TEX_motorized_effort:0 "Motorised effort"
+TEX_motorized_effort:0 "차량화 개발"
 TEX_motorized_effort_desc:0 "A key part of Patton's plan is motorised vehicles. By working closely with Henry Ford and other automotive leaders loyal to the true America, we can build the vehicles necessary to achieve victory."
-TEX_infantry_tanks:0 "Infantry Tanks"
+TEX_infantry_tanks:0 "보병 전차"
 TEX_infantry_tanks_desc:0 "For tanks to be effective they must work together with the infantry. The infantry must support our armoured cavalry for victory to be achieved. Through this team work we victory will always be ours."
 TEX_superior_fire_power:0 "Collins's combined arms plan"
 TEX_superior_fire_power_desc:0 "Joseph Lawton Collins better known as Lighting Joe has proposed that the key to victory in battle is to rely on combined arms and superior firepower. His plan holds merit, let us give him the support to achieve victory."
-TEX_praise_the_lord:0 "Praise the Lord"
+TEX_praise_the_lord:0 "신을 찬미하세"
 TEX_praise_the_lord_desc:0 "To make sure that the combined arms plans works we need to make sure that we have the best weapons available. Our soldiers need the best that we can provide."
-TEX_pass_the_ammunition:0 "And Pass the Ammunition"
+TEX_pass_the_ammunition:0 "그리고 탄약을 전달하라"
 TEX_pass_the_ammunition_desc:0 "Just as we need the best rifles and infantry equipment we also need the best artillery. Let us work on producing just that. In the mean time never forget to Praise the Lord for his victory over America's Enemies!"
-TEX_conscription_law:0 "Conscription Law change"
+TEX_conscription_law:0 "개헌"
 TEX_conscription_law_desc:0 "The strong military tradition of the south was not to be understated but the lack of manpower was an issue for the AUS. By reducing the age of conscription to 15 the American Union State was able to gain more manpower."
-TEX_army_nurse_corps:0 "Create the WACs"
+TEX_army_nurse_corps:0 "WAC 창설"
 TEX_army_nurse_corps_desc:0 "The Women Army Corps has been proposed. The WACs as they are being called would take over support roles for the men allowing more men to go to the front. In particular a good number of women wish to enter the Nursing Corps to help save the lives of patriotic Americans."
 TEX_army_rangers_desc:0 "Now that we have the plans finalised for the American Army it is time that we create the army ranger corps. The Army Ranger corps will function as the elite special forces of the American Army."
 
 ### Focuses - Navy ###
-TEX_navy:0 "Building our navy"
+TEX_navy:0 "우리의 해군을 만들자"
 TEX_navy_desc:0 "It is time that we modernise the American Navy. In the past there was the Great White Fleet launched by Theodore Roosevelt that made the world recognise and respect America's naval might. Those days are in the past, however they do not need to be. Let us rebuild the navy and make the world respect the American might again."
-TEX_battle_ships:0 "Woodward's Battleships"
+TEX_battle_ships:0 "우드워드의 전함"
 TEX_battle_ships_desc:0 "Clark H. Woodward's plan for the navy focuses on Battleships. To rule the seas we need modern battleships and battlecruisers and then victory will always be in our grasp."
-TEX_battle_cruisers:0 "Battle Cruiser efforts"
+TEX_battle_cruisers:0 "전투순양함 개발"
 TEX_battle_cruisers_desc:0 "As part of Woodward's plan for the navy, we need not just battleships but battlecruisers. To that end let us get to work in researching and building the battlecruisers needed to make the American the pride of the world."
-TEX_new_battle_ships:0 "New Battleships"
+TEX_new_battle_ships:0 "새로운 전함"
 TEX_new_battle_ships_desc:0 "To make sure that the American navy remains the envy of the world we must not languish and neglect new ways to make our Battleships better in all regards. To that end let us focus on keeping our navy up to date."
-TEX_carriers:0 "McCain's Carriers"
+TEX_carriers:0 "맥케인의 항모"
 TEX_carriers_desc:0 "John S. McCain Sr.'s plan for the navy focuses on Aircraft Carriers. To rule the seas we need to focus on the power of aircraft carriers and then victory will always be in our grasp."
 TEX_carrier_planes:0 "Build Carrier Planes"
 TEX_carrier_planes_desc:0 "Aircraft carriers are only as good as the planes that they are carrying. To that end let us make sure that our aircraft carriers have the best planes and that they never run out of them."
