--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -21,7 +21,7 @@ TEX_pass_the_ammunition:0 "그리고 탄약을 전달하라"
 TEX_pass_the_ammunition_desc:0 "Just as we need the best rifles and infantry equipment we also need the best artillery. Let us work on producing just that. In the mean time never forget to Praise the Lord for his victory over America's Enemies!"
 TEX_conscription_law:0 "개헌"
 TEX_conscription_law_desc:0 "The strong military tradition of the south was not to be understated but the lack of manpower was an issue for the AUS. By reducing the age of conscription to 15 the American Union State was able to gain more manpower."
-TEX_army_nurse_corps:0 "WAC 창설"
+TEX_army_nurse_corps:0 "여군 창설"
 TEX_army_nurse_corps_desc:0 "The Women Army Corps has been proposed. The WACs as they are being called would take over support roles for the men allowing more men to go to the front. In particular a good number of women wish to enter the Nursing Corps to help save the lives of patriotic Americans."
 TEX_army_rangers_desc:0 "Now that we have the plans finalised for the American Army it is time that we create the army ranger corps. The Army Ranger corps will function as the elite special forces of the American Army."
 
