--- a/Kaiserreich Korean Translation/localisation/KR_Political_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Political_l_english.yml
@@ -14,7 +14,7 @@ good_stability_desc:0 "정치력이 §Y150§!보다 높다면, 국가는 높은 
 very_good_stability:0 "매우 좋은 안정도"
 very_good_stability_desc:0 "정치력이 §Y150§!보다 높고 높은 안정도 상태를 가졌다면, 국가는 매우 높은 안정도 상태로 올라갈 수 있습니다. 정치력이 §Y0§!보다 낮다면 보통 안정도로 떨어질 것입니다."
 stability:0 "안정도"
-EFFECT_CHANGE_LAW_stability:0 "Change our country's stability to '$NAME|Y$' which grants ($DESC$)."
+EFFECT_CHANGE_LAW_stability:0 "우리 나라의 안정도를 '$NAME|Y$'로 바꿉니다. 다음 효과를 줍니다: ($DESC$)."
 tooltip_stability_good:0 "보통 안정도의 국가는 좋은 안정도로 업그레이드 할 수 있습니다"
 tooltip_stability_very_good:0 "좋은 안정도의 국가는 매우 좋은 안정도로 업그레이드 할 수 있습니다"
 
@@ -38,44 +38,44 @@ medium_economy:0 "WIP" #Medium Economy WIP!!!
 bad_economy:0 "WIP" #Bad Economy WIP!!!
 bust_economy:0 "WIP" #Bust Economy WIP!!!
 crash_economy:0 "WIP" #Crash Economy WIP!!!
-economic_health:0 "Work in progress, don't worry about this" #Economic Health WIP!!!
+economic_health:0 "현재 개발 중입니다, 걱정하지 마세요" #Economic Health WIP!!!
 
 ### Stability Events ###
 kr.political.1.t:0 "안정도 하락"
-kr.political.1.d:0 "Due to our recent lack of political power, our country's stability has been weakened, to the point where we are no longer very stable. Once again, doubt has begun to seep into the political discourse."
-kr.political.1.a:0 "All good things must come to an end."
+kr.political.1.d:0 "최근 우리의 정치력 부족 때문에, 우리 나라의 안정도는 더 이상 매우 높은 안정도가 아닌 수준으로 낮아졌습니다. 다시 한번, 의심이 정치 담론에 스며들기 시작했습니다."
+kr.political.1.a:0 "모든 좋은 일에는 끝이 찾아온다"
 
 kr.political.2.t:0 "안정도 하락"
-kr.political.2.d:0 "Due to our recent lack of political power, our country's stability has been weakened and we're now on the brink of instability. Few are those who are still perfectly content with our policy."
-kr.political.2.a:0 "This is concerning."
+kr.political.2.d:0 "최근 우리의 정치력 부족 때문에, 우리 나라의 안정도는 낮아졌고 우리는 이제 불안정의 위기에 처해 있습니다. 우리의 정책에 아직까지 만족하는 사람들은 적습니다."
+kr.political.2.a:0 "우려되는군."
 
 kr.political.3.t:0 "안정도 하락"
-kr.political.3.d:0 "Due to our recent lack of political power, our country's stability has been weakened and our rule is now widely considered to be unstable. Discussions regarding the, potentially, unstable future of our country are beginning to be widespread among the people."
-kr.political.3.a:0 "This is only a temporary situation."
+kr.political.3.d:0 "최근 우리의 정치력 부족 때문에, 우리 나라의 안정도는 낮아졌고 현재 우리의 통치는 불안정하다고 널리 인식되고 있습니다. 우리 나라의 불안정할지도 모를 미래에 관한 논의들이 국민들 사이에서 널리 퍼지기 시작했습니다."
+kr.political.3.a:0 "일시적인 상황일 뿐이다."
 
 kr.political.4.t:0 "안정도 하락"
-kr.political.4.d:0 "Due to our recent lack of political power, our country's stability has been weakened even more. Rioting and striking are now commonplace and our government is struggling to assert its authority."
-kr.political.4.a:0 "This doesn't bode well."
+kr.political.4.d:0 "최근 우리의 정치력 부족 때문에, 우리 나라의 안정도는 훨씬 더 낮아졌습니다. 현재 폭동과 파업이 흔히 발생하고 있고 우리 정부는 권위를 확고히하기 위해 고군분투하고 있습니다."
+kr.political.4.a:0 "조짐이 안 좋군."
 
 kr.political.5.t:0 "안정도 하락"
-kr.political.5.d:0 "Due to our recent lack of political power, our country has been plunged into disaster. The situation is, by any measure, catastrophic. There is talk of revolution and coups on the streets and the people have lost faith in our rule. We are struggling to keep our grasp on the country."
-kr.political.5.a:0 "This is a disaster!"
+kr.political.5.d:0 "최근 우리의 정치력 부족 때문에, 우리 나라는 재앙에 빠져들었습니다. 어떤 면에서 보아도 현재 상황은 파국입니다. 혁명과 쿠데타에 대한 소문이 거리에서 나돌고 있고, 국민들은 우리의 통치에 대한 신뢰를 잃었습니다. 우리는 국가를 계속 통제하기 위해 고군분투하고 있습니다."
+kr.political.5.a:0 "재앙이다!"
 
 kr.political.6.t:0 "안정도 상승!"
-kr.political.6.d:0 "Due to our recent increase of political power, we are finally beginning to regain control on the situation. However, we are still far from safe. Thankfully, the major riots and talk of revolution have, once more, become civil strikes."
-kr.political.6.a:0 "The worst is over!"
+kr.political.6.d:0 "최근 우리의 정치력 상승 때문에, 우리 나라는 마침내 상황에 대한 통제권을 되찾기 시작하고 있습니다. 하지만, 우리는 여전히 안전과는 거리가 멉니다. 다행히도, 주요 폭동들과 혁명에 대한 소문은 다시 한번, 시민 파업으로 바뀌었습니다."
+kr.political.6.a:0 "최악의 상황은 끝났다!"
 
 kr.political.7.t:0 "안정도 상승!"
-kr.political.7.d:0 "Due to our recent increase of political power, the end is in sight; we are nearly a stable state. Even if we have not fully regained the people's full trust, at least they no longer feel compelled to violence and/or anger."
-kr.political.7.a:0 "We are almost back to normal."
+kr.political.7.d:0 "최근 우리의 정치력 상승 때문에, 끝이 눈에 보이고 있습니다. 우리는 거의 안정된 국가가 되었습니다. 비록 우리가 국민의 전적인 신뢰를 완전히 회복하지는 못했지만, 다행히도 국민들은 폭력과 분노의 충동을 더 이상 느끼지 않습니다."
+kr.political.7.a:0 "우리는 거의 정상으로 돌아왔다."
 
 kr.political.8.t:0 "안정도 상승!"
-kr.political.8.d:0 "Due to our recent increase of political power, we are finally stable once more. The people trust us to run daily business and calm has returned to the streets. Hopefully, we can ensure that this won't happen again."
-kr.political.8.a:0 "[Root.GetNameDef] is strong."
+kr.political.8.d:0 "최근 우리의 정치력 상승 때문에, 우리는 마침내 더 안정적입니다. 국민들은 우리가 일상 업무를 할 수 있도록 신뢰해주고 있고 거리에 평온함이 다시 찾아왔습니다. 바라건대, 이런 일이 다시는 일어나지 않을 것이라고 확신할 수 있습니다."
+kr.political.8.a:0 "[Root.GetNameDef]은(는) 강하다."
 
 kr.political.9.t:0 "안정도 잠재적 상승"
-kr.political.9.d:0 "Due to our recent increase in political power, we now have the chance to improve our stability. However, we must do so manually.\n\nTo go up to Good Stability or Very Good Stability, you will need to take the corresponding law in the Stability Tab under Laws & Government in the Political Screen, the cost is displayed under the option.\n\nDo note that you risk rapidly losing all your positive Stability levels if you ever go under 0 Political Power, so make sure that your country is actually going to stay stable on the short to medium term being making the investment.\n\nThis message won't fire again, so don't forget."
-kr.political.9.a:0 "I understand how to raise my stability."
+kr.political.9.d:0 "최근 우리의 정치력 상승 때문에, 이제 우리는 안정도를 상승시킬 기회를 얻었습니다. 하지만, 이것은 수동적으로 해야만 합니다.\n\n좋은 안정도나 매우 좋은 안정도로 상승시키기 위해서는, 정치 화면에 있는 법률 & 정부 아래의 안정도 항목에서 해당하는 안정도를 선택해야 합니다. 선택 비용은 선택지 아래에 적혀있을 것입니다.\n\n만약 당신의 정치력이 0이하로 낮아진다면, 높은 안정도 수준이 빠르게 낮아진다는 것을 명심하셔야 합니다. 그렇기 때문에, 안정도에 투자를 하고 나서도 당신의 국가가 안정도를 유지할 수 있는지 확실히 하셔야 합니다.\n\n이 메세지는 다시 나타나지 않기 때문에, 잊지 마셔야 합니다."
+kr.political.9.a:0 "나는 안정도를 상승시키는 방법을 이해했습니다."
 
 ### Popularity Events ###
 kr.political.11.t:0 "매우 높은 인기도"
@@ -162,22 +162,22 @@ kr.political.33.a:0 "그거 정말 좋은 질문이군..."
 kr.political.33.b:0 "만우절에는 좋아했거든..."
 
 kr.political.34.t:0 "질의응답 1장"
-kr.political.34.d:0 "왜 괴뢰국을 만들 수 없나요?\n이제 괴뢰화는 평화회담이 아닌, 이벤트나 국가중점을 통해서만 가능합니다.\n\nWhen will the next patch come out?\nWe aim for one big release every two months, and of course hot-fixes wherever needed.\n\nWhy are some of the models black?\nWe use some DLC assets in our mod, so if you don't have that DLC, you will get blank textures, don't worry though, they are just cosmetic errors. We are working on setting up backup textures to avoid this, so keep an eye out for updates.\n\nI want to do bug testing/art/music/coding for KR, where can I sign up?\nWonderful! Head to our discord, link on the forums, and message either ~mw~, Nijato or Zankoas.\n\nUpdate X broke my saves!\nThat isn't a question, but if you are having issues, try loading the save, saving again straight away without unpausing, then reloading using that new save. Not using ironman can also sometimes also help. If all else fails, remember past version are available for download on the KR4 forums.\n\nAre there any other parts to KR4?\nThe only other part is the music mod, which can be found in the steam workshop description or on the forums. You should definitely go get it."
+kr.political.34.d:0 "왜 괴뢰국을 만들 수 없나요?\n이제 괴뢰화는 평화회담이 아닌, 이벤트나 국가중점을 통해서만 가능합니다.\n\n다음 패치는 언제 나오나요?\n우리는 두달에 한번씩 큰 패치를 내려고 목표를 세웠습니다, 물론 핫-픽스는 필요할 때마다 나옵니다.\n\n왜 일부 모델들은 검은색으로 나오나요?\n우리는 이 모드에서 DLC의 일부 모델들을 사용하기 때문에, 만약 당신이 그 DLC를 가지고 있지 않다면, 검은색 텍스쳐를 보게 될 것입니다, 그래도 걱정하지 마세요, 그것들은 겉보기 상의 오류일 뿐입니다. 우리는 이 상황을 피하기 위해서 백업 텍스쳐 설정을 작업 중입니다, 그러니 업데이트를  살펴보세요.\n\n저는 카이저라이히를 위해 버그 테스트/미술/음악/코드를 하고 싶습니다. 어디서 등록할 수 있나요?\n훌륭하군요! 포럼에 있는 우리의 디스코드에 오셔서,  ~mw~, Nijato, Zankoas 에게 메세지를 보내시면 됩니다.\n\nX 업데이트가 내 저장 파일을 망가뜨렸어요!\n그건 질문이 아닙니다만, 만약 그런 문제를 겪고 있다면, 저장 파일을 다시 불러오기 해보시고, 일시정지를 풀지 마시고 다시 저장하세요, 그리고 나서 새 저장 파일로 다시 불러오기 해보세요. 철인 모드를 사용하지 않는 것도 가끔식 도움이 될 수도 있습니다. 만약 모든 것들이 실패한다면, 카이저라이히 포럼에서 이전 버전을 다시 다운받을 수 있다는 것을 기억하세요.\n\n카이저라이히 모드의 다른 파츠도 있나요?\n다른 파츠로는 음악 모드만 있습니다. 스팀 창작마당의 설명이나 포럼에서 찾을 수 있습니다. 가셔서 확실히 다운받으셔야 합니다."
 kr.political.34.a:0 "네 알겠습니다."
 
 kr.political.35.t:0 "질의응답 2장"
-kr.political.35.d:0 "DLC가 필요한가요?\n아닙니다, 저희는 DLC 내용물들을 활용하겠지만, 카라를 즐기기 위해 DLC가 필요하게 만들진 않을겁니다.\n\nAre there any known bugs I should be aware of?\nNote this isn't an exhaustive list of in game bugs, just ones that we are aware of and haven't been able to fix.\n1. Very rarely, slight changes to mod files can cause all events to refire when loading a save. Making a new save or reverting back to the old version avoids this issue.\n\nI found a bug, how can I make by bug report as helpful as possible?\nReport it only once per patch, we are busy people so don't worry if it takes us a few days to answer. The paradox forums bug report thread, or the steam workshop bug report thread are the best places to report, but please only report it on one of them. Try and check the last few pages to see if someone else has reported it. The more detail the better; screen shots and saves are much appreciated. Also try and check back a few days after reporting, we might have asked a question about your bug or just want to thank you. And as always, we really appreciate you taking the time to make KR4 the best it can be!"
+kr.political.35.d:0 "DLC가 필요한가요?\n아닙니다, 저희는 DLC 내용물들을 활용하겠지만, 카라를 즐기기 위해 DLC가 필요하게 만들진 않을겁니다.\n\n제가 알아야할 알려진 버그가 있나요?\n이것들은 게임 내 버그들의 완전한 목록은 아닙니다, 우리가 인식하고 있고 아직 고칠 수 없는 버그들입니다.\n1. 매우 드물지만, 모드 파일에 약간 변경을 가하는 것이 저장 파일을 불러올 때 모든 이벤트들이 다시 발생하게 만들 수 있습니다. 새로운 저장 파일을 만들거나 구 버전으로 플레이하면 이 문제를 피할 수 있습니다.\n\n제가 버그를 발견했습니다, 어떻게 버그 보고를 하면 되나요?\n한번의 패치에 한번만 보고해주세요, 저희들도 바쁜 사람이기 때문에 답장이 오기까지 몇일이 걸리더라도 걱정하지 마세요. 파라독스 포럼의 버그 리포트 쓰레드나, 스팀 창작마당의 버그 리포트 쓰레드가 버그를 보고할 수 있는 최고의 장소입니다, 하지만 이것들 중 하나에만 보고해주세요. 상세할수록 더 좋습니다, 스크린샷이나 저장 파일은 매우 환영합니다. 그리고 보고를 하고 나서 며칠 후에 확인을 하세요, 저희가 당신의 버그에 관해 질문을 했거나 당신에게 감사의 말씀을 전했을 수도 있습니다. 그리고 언제나처럼, 저희는 당신이 카이저라이히를 최고로 만들어주는데 시간을 내주셔서 정말 감사합니다!"
 kr.political.35.a:0 "아무튼 정치력 점수를 가져가실건가요?"
 
 kr.political.28.t:0 "뉴스 이벤트"
-kr.political.28.d:0 "This is the president of the International News Tribune speaking. Kaiserreich is a mod deeply entrenched in lore and storytelling, conveyed through events, national focuses and other means. However, as the player, you might not even realise this, because most of the happenings in foreign countries are unknown to your eyes. Therefore we have created a system of news events that tell you about the major events that happened recently in other countries. They contain titbits of lore to help you understand the meaning and reasons for the events of the world, and they are also pretty and stuff. \n\nHowever, you may be a game tester or have a serious addiction with this being your 1000th game this week, or just a player who doesn't want popups in your face all the time, so you also have the option to turn this feature off entirely or allow only the important news events to fire. It's your choice..."
-kr.political.28.a:0 "I want to know everything, EVERYTHING!"
-kr.political.28.b:0 "메이저 이벤트만 알려주세요."
+kr.political.28.d:0 "저는 인터내셔널 뉴스 트리뷴의 사장입니다. 카이저라이히는 이벤트, 국가적 초점 그리고 다른 수단들을 통해 전달되는 이야기로 깊이 자리잡혀있는 모드입니다. 하지만, 플레이어인 당신은 이것을 깨닫지 못할 수도 있습니다, 왜냐하면 외국에서 일어나는 사건들은 당신이 알 수 없기 때문입니다. 그래서 우리는 외국에서 일어난 주요 이벤트들에 관해서 전달해주는 뉴스 이벤트 시스템을 만들었습니다. 뉴스 이벤트들은 당신이 세계의 사건들의 의미와 이유를 이해할 수 있도록 도와주는 토막 소식들을 담고 있습니다, 그리고 예쁜데다가 격식있기까지 합니다.\n\n그러나, 당신이 게임 테스터이거나 이 모드에 완전히 중독되서 이번 게임이 이번주에 1000번째 게임이라면, 혹은 눈 앞에 팝업이 계속 나오는 것을 싫어하는 플레이어라면, 이 요소를 완전히 꺼버리거나 중요한 뉴스 이벤트만이 나타나게 하는 선택지도 있습니다. 당신의 선택은..."
+kr.political.28.a:0 "저는 모든 것을 알고 싶어요, 모든것을!!"
+kr.political.28.b:0 "중요 이벤트만 알려주세요."
 kr.political.28.c:0 "자잘한 것들도 보고 싶습니다."
-kr.political.28.e:0 "난 이 모드 조차 좋아하지 않아..."
+kr.political.28.e:0 "나는 이 모드를 좋아하지도 않아..."
 
 kr.political.36.t:0 "만우절 장난은 어디에 있습니까?"
-kr.political.36.d:0 "In order to prevent Kaiserreich from ruining multiplayer games, this event no longer automatically activates the April Fools joke. Instead, all you have to do is open the in game console and type: "event april.1", simple!\n\nIf you would like to use it in multiplayer, head into the game files, go to extra, and then to April Fool's Enabled, then copy KR_Political.txt from there to the events folder. All other players must do the same in order to join you. Once you have done this, come back to this event and the April Fools joke will trigger."
+kr.political.36.d:0 "카이저라이히가 멀티플레이 게임을 망치는 것을 막기 위해서, 이 이벤트는 더 이상 자동으로 만우절 장난을 활성화시키지 않습니다. 그 대신, 당신이 해야 할 일은 게임 콘솔을 열고 "event april.1"을 입력하는 것입니다, 간단하죠!\n\n만약 당신이 그것을 멀티플레이에서 사용하고 싶다면, 게임 파일로 이동한 뒤, extra로 이동해서 April Fool's Enabled 로 간 뒤, 그곳에서 KR_Political.txt 를 복사해  events folder로 옮기세요. 당신의 방에 참여하기 위해서는 다른 모든 플레이어들도 이것을 똑같이 해야합니다. 이것을 완료했다면, 이 이벤트로 다시 돌아오시면 만우절 장난이 작동될 것입니다."
 kr.political.36.a:0 "알겠습니다!"
 
 kr.political.37.t:0 "진영 가입 제한을 제거하시겠습니까?"
